# ttyshark

./: CMakeLists.txt  CMakeUserPresets.json  conandata.yml  conanfile.py  main.cpp  output.txt
.github/workflows/: build.yml
reference/: IGMnetCommandList.txt
src/: main.cpp  ttyshark.cpp  ttyshark.h
src/IGMnet/: igmnet.h
src/modbusRTU/: modbusrtu.cpp  modbusrtu.h
src/serialcap/: serialcap.cpp  serialcap.h
test_package/: conanfile.py
